@@ -1,34 +1,41 @@
 /*
- * Copyright (c) 2012-2017 Red Hat, Inc.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
+ * Copyright (c) 2012-2018 Red Hat, Inc.
+ * This program and the accompanying materials are made
+ * available under the terms of the Eclipse Public License 2.0
+ * which is available at https://www.eclipse.org/legal/epl-2.0/
+ *
+ * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *   Red Hat, Inc. - initial API and implementation
  */
 package org.eclipse.che.selenium.core.client;
 
+import static java.util.Optional.ofNullable;
 import static java.util.stream.Collectors.toList;
 import static org.eclipse.che.dto.server.DtoFactory.newDto;
+import static org.slf4j.LoggerFactory.getLogger;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.reflect.TypeToken;
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
+import java.io.IOException;
 import java.io.UnsupportedEncodingException;
+import java.util.Base64;
 import java.util.List;
 import java.util.Map;
-import javax.xml.bind.DatatypeConverter;
+import org.eclipse.che.api.core.ApiException;
 import org.eclipse.che.api.core.rest.HttpJsonRequestFactory;
 import org.eclipse.che.api.core.rest.HttpJsonResponse;
 import org.eclipse.che.dto.server.JsonStringMapImpl;
-import org.eclipse.che.plugin.github.shared.GitHubKey;
+import org.slf4j.Logger;
 
 /** @author Mihail Kuznyetsov. */
 @Singleton
 public class TestGitHubServiceClient {
+  private static final Logger LOG = getLogger(TestGitHubServiceClient.class);
+
   private final HttpJsonRequestFactory requestFactory;
 
   @Inject
@@ -58,15 +65,15 @@ public class TestGitHubServiceClient {
         .request();
   }
 
-  public void uploadPublicKey(final String username, final String password, final String key)
+  public void uploadPublicKey(
+      final String username, final String password, final String key, String keyTitle)
       throws Exception {
-    final String sshKeyTitle = "QA selenium test";
 
     GitHubKey publicSshKey = newDto(GitHubKey.class);
-    publicSshKey.setTitle(sshKeyTitle);
+    publicSshKey.setTitle(keyTitle);
     publicSshKey.setKey(key);
 
-    deletePublicKeys(username, password, sshKeyTitle);
+    deletePublicKeys(username, password, keyTitle);
     createPublicKey(username, password, publicSshKey);
   }
 
@@ -183,9 +190,12 @@ public class TestGitHubServiceClient {
           .setAuthorizationHeader(createBasicAuthHeader(username, password))
           .request();
     }
+
+    LOG.debug("Application grants '{}' were removed from github.com", grandsId);
   }
 
-  public String getName(final String username, final String password) throws Exception {
+  public String getName(final String username, final String password)
+      throws IOException, ApiException {
     String url = "https://api.github.com/users/" + username;
     HttpJsonResponse response =
         requestFactory
@@ -193,14 +203,26 @@ public class TestGitHubServiceClient {
             .useGetMethod()
             .setAuthorizationHeader(createBasicAuthHeader(username, password))
             .request();
+
+    return obtainNameFromResponse(response);
+  }
+
+  /**
+   * Obtain name of github user from github response
+   *
+   * @param response
+   * @return name if it presents in response and != null, or login otherwise.
+   */
+  private String obtainNameFromResponse(HttpJsonResponse response) throws IOException {
     Map<String, String> properties = response.asProperties();
-    return properties.getOrDefault("name", properties.get("login"));
+    String login = properties.get("login");
+    return ofNullable(properties.getOrDefault("name", login)).orElse(login);
   }
 
   private String createBasicAuthHeader(String username, String password)
       throws UnsupportedEncodingException {
     byte[] nameAndPass = (username + ":" + password).getBytes("UTF-8");
-    String base64 = DatatypeConverter.printBase64Binary(nameAndPass);
+    String base64 = Base64.getEncoder().encodeToString(nameAndPass);
     return "Basic " + base64;
   }
 }
